k8s/librarian-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librarian-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: librarian-service
  template:
    metadata:
      labels:
        app: librarian-service
    spec:
      containers:
        - name: librarian-service
          image: sovanmao/libraryms-librarian:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: librarian-service
spec:
  type: ClusterIP
  selector:
    app: librarian-service
  ports:
    - port: 5001
      targetPort: 5001
      protocol: TCP
